--- a/index.html
+++ b/index.html
@@ -9,11 +9,13 @@
 
     <!-- Font Awesome CDN -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/css/all.min.css">
+
     <link rel="stylesheet" href="./css/main.css">
     <link rel="stylesheet" href="./css/navbar.css">
     <link rel="stylesheet" href="./css/login/form.css">
     <link rel="stylesheet" href="./css/login/checkbox.css">
     <link rel="stylesheet" href="./css/login/radio_btn.css">
+    <link rel="stylesheet" href="./css/footer.css">
 </head>
 
 <body>
@@ -78,6 +80,48 @@
             <input type="submit" class="form__button" value="LOGIN">
         </form>
     </div>
+
+    <footer class="footer__distributed">
+        <div class="footer__left">
+            <h3>Exam Cell Automation</h3>
+            <p class="footer__links">
+                <a href="#">About</a>
+                |
+                <a href="#">Contact</a>
+                |
+                <a href="#">FAQ</a>
+                |
+            </p>
+
+            <p class="footer__company_name">&#169; 2021 Exam Cell Automation </p>
+        </div>
+
+        <div class="footer__center">
+            <div>
+                <i class="fas fa-phone"></i>
+                <p>+91 22-27782183</p>
+            </div>
+            <div>
+                <i class="fas fa-envelope"></i>
+                <p><a href="mailto:support@eca.com">support@eca.com</a></p>
+            </div>
+        </div>
+
+        <div class="footer__right">
+            <p class="footer__company_about">
+                <span>About the company</span>
+                We aim to bring in a centralized system that will ensure the activities in the context of an examination
+                that can be effectively managed.
+            </p>
+            <div class="footer__icons">
+                <a href="#"><i class="fab fa-facebook"></i></a>
+                <a href="#"><i class="fab fa-twitter"></i></a>
+                <a href="#"><i class="fab fa-instagram"></i></a>
+                <a href="#"><i class="fab fa-linkedin"></i></a>
+                <a href="#"><i class="fab fa-youtube"></i></a>
+            </div>
+        </div>
+    </footer>
 
     <script src="./javascript/navbar.js"></script>
     <script src="./javascript/loginForm.js"></script>
