--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         <ul class="menu">
             <li class="logo"><a href="#">Exam Cell Automation</a></li>
             <li class="item"><a href="#">About Us</a></li>
-            <li class="item"><a href="#">FAQ</a></li>
+            <li class="item"><a href="./xml/FAQ.xml">FAQ</a></li>
             <li class="toggle"><a href="#"><i class="fas fa-bars"></i></a></li>
         </ul>
     </nav>
@@ -89,7 +89,7 @@
                 |
                 <a href="#">Contact</a>
                 |
-                <a href="#">FAQ</a>
+                <a href="./xml/FAQ.xml">FAQ</a>
                 |
             </p>
 
